--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,6 @@
   <body>
   	Login
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <!-- built files will be auto injected alasla-->
   </body>
 </html>
