--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
   	Login
     <div id="app"></div>
     <!-- built files will be auto injected alasla-->
-	<p>modification</p>
+	<p>modification1</p>
   </body>
 </html>
